Update config file

--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,1 +1,10 @@
-
+server:
+  host: localhost
+  port: 8080
+postgres:
+  host: localhost
+  port: 5432
+  username: username
+  password: password
+  pool:
+    max: 50
