--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -12,6 +12,15 @@ sql:
         package: "db"
         out: "./internal/db/sqlc/"
         sql_package: "pgx/v5"
+        emit_pointers_for_null_types: true
+        overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
+          - db_type: "uuid"
+            go_type: "github.com/google/uuid.UUID"
+          - db_type: "text"
+            go_type:
+              type: "string"
 plugins: []
 rules: []
 options: {}
