--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -48,7 +48,7 @@ jobs:
       pull-requests: read
       packages: write
     env:
-      IMAGE_NAME: golang-rest-api-starter
+      IMAGE_NAME: go-rest-api-boilerplate
       IMAGE_VERSION: 1.0
     runs-on: ubuntu-latest
     strategy:
@@ -77,5 +77,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/nealajpatel/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+          tags: ghcr.io/misterpuffin/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
 
